// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`heatmapEmpty 1`] = `
{
  "annotation": {},
  "chartType": "heatmap",
  "config": {
    "heatmap": {
      "backgroundColor": "transparent",
      "cell": {
        "stroke": "#fff",
      },
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": true,
        "labelOverlap": true,
        "labelStroke": "#fff",
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontColor": "#6F6F6F",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rightTop",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "frameCornerRadius": 0,
        "headerBackgroundColor": "transparent",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        "outlineBorderLineWidth": 0,
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "heatmap": {
        "backgroundColor": "transparent",
        "cell": {
          "stroke": "#fff",
        },
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": true,
          "labelOverlap": true,
          "labelStroke": "#fff",
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "frameCornerRadius": 0,
          "headerBackgroundColor": "transparent",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
          "outlineBorderLineWidth": 0,
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2281",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "信封",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2281",
      "__OriginalData__": {
        "co_20250924170401_4523": "2281",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "信封",
      },
      "co_20250924170401_4523": "2281",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "信封",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2134",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "器具",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2134",
      "__OriginalData__": {
        "co_20250924170401_4523": "2134",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "器具",
      },
      "co_20250924170401_4523": "2134",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "器具",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2918",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "收纳具",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2918",
      "__OriginalData__": {
        "co_20250924170401_4523": "2918",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "收纳具",
      },
      "co_20250924170401_4523": "2918",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "收纳具",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2106",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "标签",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2106",
      "__OriginalData__": {
        "co_20250924170401_4523": "2106",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "标签",
      },
      "co_20250924170401_4523": "2106",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "标签",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2266",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "用品",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2266",
      "__OriginalData__": {
        "co_20250924170401_4523": "2266",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "用品",
      },
      "co_20250924170401_4523": "2266",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "用品",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2272",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "系固件",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2272",
      "__OriginalData__": {
        "co_20250924170401_4523": "2272",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "系固件",
      },
      "co_20250924170401_4523": "2272",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "系固件",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2063",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "纸张",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2063",
      "__OriginalData__": {
        "co_20250924170401_4523": "2063",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "纸张",
      },
      "co_20250924170401_4523": "2063",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "纸张",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2009",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "美术",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2009",
      "__OriginalData__": {
        "co_20250924170401_4523": "2009",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "美术",
      },
      "co_20250924170401_4523": "2009",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "美术",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "3352",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "办公用品",
      "__Dim_Y__": "装订机",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "3352",
      "__OriginalData__": {
        "co_20250924170401_4523": "3352",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "装订机",
      },
      "co_20250924170401_4523": "3352",
      "xA_20250924170406_4dbc": "办公用品",
      "yA_20250924170409_db93": "装订机",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2401",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "家具",
      "__Dim_Y__": "书架",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2401",
      "__OriginalData__": {
        "co_20250924170401_4523": "2401",
        "xA_20250924170406_4dbc": "家具",
        "yA_20250924170409_db93": "书架",
      },
      "co_20250924170401_4523": "2401",
      "xA_20250924170406_4dbc": "家具",
      "yA_20250924170409_db93": "书架",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "620",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "家具",
      "__Dim_Y__": "桌子",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "620",
      "__OriginalData__": {
        "co_20250924170401_4523": "620",
        "xA_20250924170406_4dbc": "家具",
        "yA_20250924170409_db93": "桌子",
      },
      "co_20250924170401_4523": "620",
      "xA_20250924170406_4dbc": "家具",
      "yA_20250924170409_db93": "桌子",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "3172",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "家具",
      "__Dim_Y__": "椅子",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "3172",
      "__OriginalData__": {
        "co_20250924170401_4523": "3172",
        "xA_20250924170406_4dbc": "家具",
        "yA_20250924170409_db93": "椅子",
      },
      "co_20250924170401_4523": "3172",
      "xA_20250924170406_4dbc": "家具",
      "yA_20250924170409_db93": "椅子",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2298",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "家具",
      "__Dim_Y__": "用具",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2298",
      "__OriginalData__": {
        "co_20250924170401_4523": "2298",
        "xA_20250924170406_4dbc": "家具",
        "yA_20250924170409_db93": "用具",
      },
      "co_20250924170401_4523": "2298",
      "xA_20250924170406_4dbc": "家具",
      "yA_20250924170409_db93": "用具",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2139",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "技术",
      "__Dim_Y__": "复印机",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2139",
      "__OriginalData__": {
        "co_20250924170401_4523": "2139",
        "xA_20250924170406_4dbc": "技术",
        "yA_20250924170409_db93": "复印机",
      },
      "co_20250924170401_4523": "2139",
      "xA_20250924170406_4dbc": "技术",
      "yA_20250924170409_db93": "复印机",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2177",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "技术",
      "__Dim_Y__": "电话",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2177",
      "__OriginalData__": {
        "co_20250924170401_4523": "2177",
        "xA_20250924170406_4dbc": "技术",
        "yA_20250924170409_db93": "电话",
      },
      "co_20250924170401_4523": "2177",
      "xA_20250924170406_4dbc": "技术",
      "yA_20250924170409_db93": "电话",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "1241",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "技术",
      "__Dim_Y__": "设备",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "1241",
      "__OriginalData__": {
        "co_20250924170401_4523": "1241",
        "xA_20250924170406_4dbc": "技术",
        "yA_20250924170409_db93": "设备",
      },
      "co_20250924170401_4523": "1241",
      "xA_20250924170406_4dbc": "技术",
      "yA_20250924170409_db93": "设备",
    },
    {
      "__Dim_ColorId__": "co_20250924170401_4523",
      "__Dim_Color__": "2085",
      "__Dim_Detail__": "sum(amount)",
      "__Dim_X__": "技术",
      "__Dim_Y__": "配件",
      "__MeaId__": "co_20250924170401_4523",
      "__MeaName__": "sum(amount)",
      "__MeaValue__": "2085",
      "__OriginalData__": {
        "co_20250924170401_4523": "2085",
        "xA_20250924170406_4dbc": "技术",
        "yA_20250924170409_db93": "配件",
      },
      "co_20250924170401_4523": "2085",
      "xA_20250924170406_4dbc": "技术",
      "yA_20250924170409_db93": "配件",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "co_20250924170401_4523": "sum(amount)",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": 3352,
          "colorMin": 620,
          "count": 17,
          "max": 3352,
          "min": 620,
          "sum": 37534,
        },
      },
      "id": "heatmap",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {},
        "colorItems": [],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "product_type",
      "autoFormat": true,
      "encoding": "xAxis",
      "id": "xA_20250924170406_4dbc",
    },
    {
      "alias": "product_sub_type",
      "autoFormat": true,
      "encoding": "yAxis",
      "id": "yA_20250924170409_db93",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "co_20250924170401_4523",
    ],
    "detail": [
      "__MeaName__",
    ],
    "label": [],
    "tooltip": [
      "xA_20250924170406_4dbc",
      "yA_20250924170409_db93",
    ],
    "x": [
      "xA_20250924170406_4dbc",
    ],
    "y": [
      "yA_20250924170409_db93",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "sum(amount)",
      "autoFormat": false,
      "encoding": "color",
      "format": {
        "auto": false,
        "type": "number",
      },
      "id": "co_20250924170401_4523",
    },
  ],
}
`;

exports[`heatmapEmpty 2`] = `
{
  "animation": true,
  "axes": [
    {
      "bandPadding": 0,
      "orient": "left",
      "type": "band",
    },
    {
      "bandPadding": 0,
      "orient": "bottom",
      "type": "band",
    },
  ],
  "background": "transparent",
  "cell": {
    "style": {
      "fill": {
        "field": "__Dim_Color__",
        "scale": "color",
      },
      "lineWidth": 1,
      "shape": "rect",
      "stroke": "#fff",
      "visible": [Function],
    },
  },
  "color": {
    "domain": [
      {
        "dataId": "heatmap",
        "fields": [
          "__Dim_Color__",
        ],
      },
    ],
    "range": [
      "#C2CEFF",
      "#5766EC",
    ],
    "type": "linear",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "heatmap",
    "values": [
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2281",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "信封",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2281",
        "__OriginalData__": {
          "co_20250924170401_4523": "2281",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "信封",
        },
        "co_20250924170401_4523": "2281",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "信封",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2134",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "器具",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2134",
        "__OriginalData__": {
          "co_20250924170401_4523": "2134",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "器具",
        },
        "co_20250924170401_4523": "2134",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "器具",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2918",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "收纳具",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2918",
        "__OriginalData__": {
          "co_20250924170401_4523": "2918",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "收纳具",
        },
        "co_20250924170401_4523": "2918",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "收纳具",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2106",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "标签",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2106",
        "__OriginalData__": {
          "co_20250924170401_4523": "2106",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "标签",
        },
        "co_20250924170401_4523": "2106",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "标签",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2266",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "用品",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2266",
        "__OriginalData__": {
          "co_20250924170401_4523": "2266",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "用品",
        },
        "co_20250924170401_4523": "2266",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "用品",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2272",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "系固件",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2272",
        "__OriginalData__": {
          "co_20250924170401_4523": "2272",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "系固件",
        },
        "co_20250924170401_4523": "2272",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "系固件",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2063",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "纸张",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2063",
        "__OriginalData__": {
          "co_20250924170401_4523": "2063",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "纸张",
        },
        "co_20250924170401_4523": "2063",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "纸张",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2009",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "美术",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2009",
        "__OriginalData__": {
          "co_20250924170401_4523": "2009",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "美术",
        },
        "co_20250924170401_4523": "2009",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "美术",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "3352",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "办公用品",
        "__Dim_Y__": "装订机",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "3352",
        "__OriginalData__": {
          "co_20250924170401_4523": "3352",
          "xA_20250924170406_4dbc": "办公用品",
          "yA_20250924170409_db93": "装订机",
        },
        "co_20250924170401_4523": "3352",
        "xA_20250924170406_4dbc": "办公用品",
        "yA_20250924170409_db93": "装订机",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2401",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "家具",
        "__Dim_Y__": "书架",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2401",
        "__OriginalData__": {
          "co_20250924170401_4523": "2401",
          "xA_20250924170406_4dbc": "家具",
          "yA_20250924170409_db93": "书架",
        },
        "co_20250924170401_4523": "2401",
        "xA_20250924170406_4dbc": "家具",
        "yA_20250924170409_db93": "书架",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "620",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "家具",
        "__Dim_Y__": "桌子",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "620",
        "__OriginalData__": {
          "co_20250924170401_4523": "620",
          "xA_20250924170406_4dbc": "家具",
          "yA_20250924170409_db93": "桌子",
        },
        "co_20250924170401_4523": "620",
        "xA_20250924170406_4dbc": "家具",
        "yA_20250924170409_db93": "桌子",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "3172",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "家具",
        "__Dim_Y__": "椅子",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "3172",
        "__OriginalData__": {
          "co_20250924170401_4523": "3172",
          "xA_20250924170406_4dbc": "家具",
          "yA_20250924170409_db93": "椅子",
        },
        "co_20250924170401_4523": "3172",
        "xA_20250924170406_4dbc": "家具",
        "yA_20250924170409_db93": "椅子",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2298",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "家具",
        "__Dim_Y__": "用具",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2298",
        "__OriginalData__": {
          "co_20250924170401_4523": "2298",
          "xA_20250924170406_4dbc": "家具",
          "yA_20250924170409_db93": "用具",
        },
        "co_20250924170401_4523": "2298",
        "xA_20250924170406_4dbc": "家具",
        "yA_20250924170409_db93": "用具",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2139",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "技术",
        "__Dim_Y__": "复印机",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2139",
        "__OriginalData__": {
          "co_20250924170401_4523": "2139",
          "xA_20250924170406_4dbc": "技术",
          "yA_20250924170409_db93": "复印机",
        },
        "co_20250924170401_4523": "2139",
        "xA_20250924170406_4dbc": "技术",
        "yA_20250924170409_db93": "复印机",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2177",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "技术",
        "__Dim_Y__": "电话",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2177",
        "__OriginalData__": {
          "co_20250924170401_4523": "2177",
          "xA_20250924170406_4dbc": "技术",
          "yA_20250924170409_db93": "电话",
        },
        "co_20250924170401_4523": "2177",
        "xA_20250924170406_4dbc": "技术",
        "yA_20250924170409_db93": "电话",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "1241",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "技术",
        "__Dim_Y__": "设备",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "1241",
        "__OriginalData__": {
          "co_20250924170401_4523": "1241",
          "xA_20250924170406_4dbc": "技术",
          "yA_20250924170409_db93": "设备",
        },
        "co_20250924170401_4523": "1241",
        "xA_20250924170406_4dbc": "技术",
        "yA_20250924170409_db93": "设备",
      },
      {
        "__Dim_ColorId__": "co_20250924170401_4523",
        "__Dim_Color__": "2085",
        "__Dim_Detail__": "sum(amount)",
        "__Dim_X__": "技术",
        "__Dim_Y__": "配件",
        "__MeaId__": "co_20250924170401_4523",
        "__MeaName__": "sum(amount)",
        "__MeaValue__": "2085",
        "__OriginalData__": {
          "co_20250924170401_4523": "2085",
          "xA_20250924170406_4dbc": "技术",
          "yA_20250924170409_db93": "配件",
        },
        "co_20250924170401_4523": "2085",
        "xA_20250924170406_4dbc": "技术",
        "yA_20250924170409_db93": "配件",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "dataFilter": [Function],
    "formatMethod": [Function],
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": true,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "stroke": "#fff",
    },
    "visible": true,
  },
  "legends": {
    "customFilter": [Function],
    "field": "__Dim_Color__",
    "handlerText": {
      "style": {
        "fill": "#646A73",
        "fontSize": 12,
        "fontWeight": 400,
      },
      "visible": true,
    },
    "maxWidth": "30%",
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "color",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "visible": false,
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "heatmap",
  "valueField": "__MeaValue__",
  "xField": "__Dim_X__",
  "yField": "__Dim_Y__",
}
`;

exports[`heatmapEmpty 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {},
  "colorItems": [],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
